WP-9098 fixed voices cards center alignment issues with small regions

--- a/sass/conditionals/voices-filters.sass
+++ b/sass/conditionals/voices-filters.sass
@@ -2826,6 +2826,70 @@ a[class^="bg-"]:hover
           +breakpoint($bp-tablet-pot)
             width: 72%
 
+  .inner-sidebar-wrapper
+    #quicklinks,
+    .sidebar-inner
+      .pane-voices-filters-all-voices-list-panel-pane
+        .views-row
+          +breakpoint($bp-for-desktop-up)
+            width: 100%
+            margin-right: 20px
+
+        .voices_display_all_list_cta
+          +breakpoint($bp-for-desktop-up)
+            width: 92%
+            margin-top: 25px
+
+      .pane-voices-filters-voices-filters-pane 
+        .view-filters 
+          .views-widget-filter-field_industry_tid 
+            .views-widget 
+              .form-item-field-industry-tid
+                +breakpoint($bp-for-desktop-up)
+                  padding-left: 0px
+
+          .views-widget-filter-field_region_of_interest_tid 
+            .views-widget 
+              .form-item-field-region-of-interest-tid
+                +breakpoint($bp-for-desktop-up)
+                  padding-left: 0px
+
+        .view-content 
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              margin-right: 15px
+              width: 100%
+
+      .pane-voices-filters-voices-list-cta-panel-pane
+        .views-row
+          +breakpoint($bp-for-desktop-up)
+            margin-left: 15px
+            margin-right: 15px
+        .voices_display_list_cta
+          +breakpoint($bp-for-desktop-up)
+            margin-left: 15px
+            margin-top: 25px
+
+  .inner-main-wrapper 
+    .main-middle 
+      .column-first,
+      .column-second
+        .pane-voices-filters-all-voices-list-panel-pane
+          .voices_display_all_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 0px
+
+        .pane-voices-filters-voices-list-cta-panel-pane
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              margin-right: 15px
+          .voices_display_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              width: 87%
+
 .no-sidebars.panels-layout-gsb-no-sidebar,
 .no-sidebars.panels-layout-gsb-full-bleed-page
   .view-display-id-voices_filters_pane 
@@ -2955,7 +3019,165 @@ a[class^="bg-"]:hover
           +breakpoint($bp-tablet-land)
             margin-top: 30px
 
+    .inner-sidebar-wrapper 
+      #quicklinks,
+      .sidebar-inner
+        .pane-voices-filters-all-voices-list-panel-pane 
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-right: 20px
+          .voices_display_all_list_cta
+            +breakpoint($bp-for-desktop-up)
+              width: 92%
+              margin-top: 30px
+
+        .pane-voices-filters-voices-filters-pane 
+          .view-filters 
+            .views-widget-filter-field_industry_tid 
+              .views-widget 
+                .form-item-field-industry-tid
+                  +breakpoint($bp-for-desktop-up)
+                    padding-left: 0px
+
+            .views-widget-filter-field_region_of_interest_tid 
+              .views-widget 
+                .form-item-field-region-of-interest-tid
+                  +breakpoint($bp-for-desktop-up)
+                    padding-left: 0px
+
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 5px
+              margin-right: 15px
+
+        .pane-voices-filters-voices-list-cta-panel-pane
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              margin-right: 15px
+          .voices_display_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              margin-top: 30px
+
 .pane-voices-filters-voices-single-teaser-pane
   .views-row.views-row-1.views-row-odd.views-row-first.views-row-last
     +breakpoint($bp-for-desktop-up)
       margin-right: 0
+
+.no-sidebars.panels-layout-gsb-landing-standard-page-one
+  .inner-sidebar-wrapper
+    #quicklinks,
+    .sidebar-inner
+      .pane-voices-filters-all-voices-list-panel-pane
+        .views-row
+          +breakpoint($bp-for-desktop-up)
+            width: 100%
+            margin-right: 20px
+
+        .voices_display_all_list_cta
+          +breakpoint($bp-for-desktop-up)
+            width: 92%
+            margin-top: 25px
+
+      .pane-voices-filters-voices-filters-pane 
+        .view-filters 
+          .views-widget-filter-field_industry_tid 
+            .views-widget 
+              .form-item-field-industry-tid
+                +breakpoint($bp-for-desktop-up)
+                  padding-left: 0px
+
+          .views-widget-filter-field_region_of_interest_tid 
+            .views-widget 
+              .form-item-field-region-of-interest-tid
+                +breakpoint($bp-for-desktop-up)
+                  padding-left: 0px
+
+        .view-content 
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              margin-right: 15px
+              width: 100%
+
+      .pane-voices-filters-voices-list-cta-panel-pane
+        .views-row
+          +breakpoint($bp-for-desktop-up)
+            margin-left: 15px
+            margin-right: 15px
+        .voices_display_list_cta
+          +breakpoint($bp-for-desktop-up)
+            margin-left: 15px
+            margin-top: 25px
+
+  .inner-main-wrapper 
+    .main-middle 
+      .column-first,
+      .column-second
+        .pane-voices-filters-all-voices-list-panel-pane
+          +breakpoint($bp-for-desktop-up)
+            padding-left: 20px
+            padding-right: 10px
+
+          .voices_display_all_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 0px
+              width: 95%
+
+        .pane-voices-filters-voices-filters-pane 
+          .view-filters 
+            .views-widget-filter-field_industry_tid 
+              .views-widget 
+                .form-item-field-industry-tid
+                  +breakpoint($bp-for-desktop-up)
+                    padding-left: 0px
+
+            .views-widget-filter-field_region_of_interest_tid 
+              .views-widget 
+                .form-item-field-region-of-interest-tid
+                  +breakpoint($bp-for-desktop-up)
+                    padding-left: 0px
+
+        .pane-voices-filters-voices-list-cta-panel-pane
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+          .voices_display_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 15px
+              width: 87%
+
+.sidebar-first.panels-layout-gsb-no-sidebar
+  .inner-main-wrapper 
+    .main-middle 
+      .column-first,
+      .column-second
+        .pane-voices-filters-all-voices-list-panel-pane 
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-right: 30px
+              margin-left: 0px
+          .voices_display_all_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 0px
+
+        .pane-voices-filters-voices-filters-pane
+          .view-content
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 18px
+              margin-right: 18px
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              width: 100%
+
+        .pane-voices-filters-voices-list-cta-panel-pane
+          .views-row
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 20px
+              margin-right: 20px
+
+          .voices_display_list_cta
+            +breakpoint($bp-for-desktop-up)
+              margin-left: 20px
+              width: 86%
